fix alignment of four week columns

--- a/flightSF/src/index.css
+++ b/flightSF/src/index.css
@@ -23,6 +23,7 @@ a:hover {
 }
 
 body {
+  width: 100%;
   margin: 0;
   display: flex;
   place-items: center;
